# ods_mlops

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  test.py
ods_mlops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
